going to see if nesting figures works

--- a/Assignments/A3Encyclopedia/A3.html
+++ b/Assignments/A3Encyclopedia/A3.html
@@ -94,18 +94,20 @@
     </figure>
     <p>The springbok is a slender antelope with long legs and neck. Both sexes reach 71–86 cm (28–34 in) at the shoulder with a head-and-body length typically between 120 and 150 cm (47 and 59 in).[2] The weights for both sexes range between 27 and 42 kilograms (60 and 93 lb). The tail, 14 to 28 cm (5.5 to 11.0 in) long, ends in a short, black tuft.[2][10] Major differences in the size and weight of the subspecies are seen. A study tabulated average body measurements for the three subspecies. <em>A. m. angolensis</em> males stand 84 cm (33 in) tall at the shoulder, while females are 81 cm (32 in) tall. The males weigh around 31 kg (68 lb), while the females weigh 32 kg (71 lb). <em>A. m. hofmeyri</em> is the largest subspecies; males are nearly 86 cm (34 in) tall, and the notably shorter females are 71 cm (28 in) tall. The males, weighing 42 kg (93 lb), are heavier than females, that weigh 35 kg (77 lb). However, <em>A. m. marsupialis</em> is the smallest subspecies; males are 75 cm (30 in) tall and females 72 cm (28 in) tall. Average weight of males is 31 kg (68 lb), while for females it is 27 kg (60 lb).[2] Another study showed a strong correlation between the availability of winter dietary protein and the body mass.[11]</p>
     <p>Dark stripes extend across the white face, from the corner of the eyes to the mouth. A dark patch marks the forehead. In juveniles, the stripes and the patch are light brown. The ears, narrow and pointed, measure 15–19 cm (5.9–7.5 in). Typically light brown, the springbok has a dark reddish-brown band running horizontally from the upper foreleg to the edge of the buttocks, separating the dark back from the white underbelly. The tail (except the terminal black tuft), buttocks, the insides of the legs and the rump are all white. Two other varieties – pure black and pure white forms – are artificially selected in some South African ranches.[12] Though born with a deep black sheen, adult black springbok are two shades of chocolate-brown and develop a white marking on the face as they mature. White springbok, as the name suggests, are predominantly white with a light tan stripe on the flanks.[2][12]</p>
-    <p>The three springbok varieties</p>
     <figure>
-        <img src="Normal_Springbok.png">
-        <figcaption>Typical springbok</figcaption>
-    </figure>
-    <figure>
-        <img src="Black_Springbok.png">
-        <figcaption>Pure black springbok</figcaption>
-    </figure>
-    <figure>
-        <img src="White_Springbok.png">
-        <figcaption>Pure white springbok</figcaption>
+        <figure>
+            <img src="Normal_Springbok.png">
+            <figcaption>Typical springbok</figcaption>
+        </figure>
+        <figure>
+            <img src="Black_Springbok.png">
+            <figcaption>Pure black springbok</figcaption>
+        </figure>
+        <figure>
+            <img src="White_Springbok.png">
+            <figcaption>Pure white springbok</figcaption>
+        </figure>
+        <figcaption>The three springbok varieties</figcaption>
     </figure>
     <p>The three subspecies also differ in their colour. <em>A. m. angolensis</em> has a brown to tawny coat, with thick, dark brown stripes on the face extending two-thirds down to the snout. While the lateral stripe is nearly black, the stripe on the rump is dark brown. The medium brown forehead patch extends to eye level and is separated from the bright white face by a dark brown border. A brown spot is seen on the nose. <em>A. m. hofmeyri</em> is a light fawn, with thin, dark brown face stripes. The stripes on the flanks are dark brown to black, and the posterior stripes are moderately brown. The forehead patch, dark brown or fawn, extends beyond the level of the eyes and mixes with the white of the face without any clear barriers. The nose may have a pale smudge. <em>A. m. marsupialis</em> is a rich chestnut brown, with thin, light face stripes. The stripe near the rump is well-marked, and that on the flanks is deep brown. The forehead is brown, fawn, or white, the patch not extending beyond the eyes and having no sharp boundaries. The nose is white or marked with brown.[8]</p>
     <p>The skin along the middle of the dorsal side is folded in, and covered with 15 to 20 cm (6 to 8 in) white hair erected by arrector pili muscles (located between hair follicles). This white hair is almost fully concealed by the surrounding brown hairs until the fold opens up, and this is a major feature distinguishing this antelope from gazelles.[2] Springbok differ from gazelles in several other ways; for instance, springbok have two premolars on both sides of either jaw, rather than the three observed in gazelles. This gives a total of 28 teeth in the springbok, rather than 32 of gazelles.[2] Other points of difference include a longer, broader, and rigid bridge to the nose and more muscular cheeks in springbok, and differences in the structure of the horns.[12]</p>
@@ -180,7 +182,7 @@
     <h2 id="References">References</h2>
     <hr>
     <p><a href="https://en.wikipedia.org/wiki/Springbok">Real Springbok Wikipedia</a></p>
-    
+
     <h2 id="External_Links">External Links</h2>
     <hr>
     <p><a href="https://jackdanis.github.io/Assignment_3_Encyclopedia/Assignment3Main.html">Yorkies</a></p>
