added strong elements

--- a/Assignments/A3Encyclopedia/A3.html
+++ b/Assignments/A3Encyclopedia/A3.html
@@ -14,7 +14,7 @@
     <p><em>This article is about the antelope. For the "Springboks", see South Africa national rugby union team. For other uses, see Springbok (disambiguation).</em></p>
     <figure>
         <img src="Male_Springbok_Etosha_2012.jpg">
-        <figcaption>Springbok<br>
+        <figcaption><strong>Springbok</strong><br>
             Temporal range: Pleistocene–Recent<br>
             Male at Etosha National Park<br>
             Scientific classification<br>
@@ -107,7 +107,7 @@
             <img src="White_Springbok.png">
             <figcaption>Pure white springbok</figcaption>
         </figure>
-        <figcaption>The three springbok varieties</figcaption>
+        <figcaption><strong>The three springbok varieties</strong></figcaption>
     </figure>
     <p>The three subspecies also differ in their colour. <em>A. m. angolensis</em> has a brown to tawny coat, with thick, dark brown stripes on the face extending two-thirds down to the snout. While the lateral stripe is nearly black, the stripe on the rump is dark brown. The medium brown forehead patch extends to eye level and is separated from the bright white face by a dark brown border. A brown spot is seen on the nose. <em>A. m. hofmeyri</em> is a light fawn, with thin, dark brown face stripes. The stripes on the flanks are dark brown to black, and the posterior stripes are moderately brown. The forehead patch, dark brown or fawn, extends beyond the level of the eyes and mixes with the white of the face without any clear barriers. The nose may have a pale smudge. <em>A. m. marsupialis</em> is a rich chestnut brown, with thin, light face stripes. The stripe near the rump is well-marked, and that on the flanks is deep brown. The forehead is brown, fawn, or white, the patch not extending beyond the eyes and having no sharp boundaries. The nose is white or marked with brown.[8]</p>
     <p>The skin along the middle of the dorsal side is folded in, and covered with 15 to 20 cm (6 to 8 in) white hair erected by arrector pili muscles (located between hair follicles). This white hair is almost fully concealed by the surrounding brown hairs until the fold opens up, and this is a major feature distinguishing this antelope from gazelles.[2] Springbok differ from gazelles in several other ways; for instance, springbok have two premolars on both sides of either jaw, rather than the three observed in gazelles. This gives a total of 28 teeth in the springbok, rather than 32 of gazelles.[2] Other points of difference include a longer, broader, and rigid bridge to the nose and more muscular cheeks in springbok, and differences in the structure of the horns.[12]</p>
