--- a/Assignments/A3Encyclopedia/A3.html
+++ b/Assignments/A3Encyclopedia/A3.html
@@ -65,7 +65,7 @@
             <li><a href="#Threats_Conservation">Threats and conservation</a></li>
             <li><a href="#Human_Relationship">Relationship with humans</a></li>
             <li><a href="#References">References</a></li>
-            <li><a href="#External_Links">External links</a></li>
+            <li><a href="#External_Links">See also...</a></li>
         </ol>
 
     <h2 id="Etymology">Etymology</h2>
@@ -183,7 +183,7 @@
     <hr>
     <p><a href="https://en.wikipedia.org/wiki/Springbok">Real Springbok Wikipedia</a></p>
 
-    <h2 id="External_Links">External Links</h2>
+    <h2 id="External_Links">See also...</h2>
     <hr>
     <p><a href="https://jackdanis.github.io/Assignment_3_Encyclopedia/Assignment3Main.html">Yorkies</a></p>
     <p><a href="https://eligrah.github.io/assignments/assignment_2">Penguins</a></p>
