--- a/Assignments/A3Encyclopedia/Assignment3.html
+++ b/Assignments/A3Encyclopedia/Assignment3.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Springbok</title>
-    <meta name ="author" content="wiki"
+    <meta name ="author" content="wiki">
 </head>
 <body>
     <h1>Springbok</h1>
