fixed li attribute

--- a/Assignments/A3Encyclopedia/Assignment3.html
+++ b/Assignments/A3Encyclopedia/Assignment3.html
@@ -49,18 +49,20 @@
     <h3>Contents</h3>
         <ol>
             <li><a href="#Etymology">Etymology</a></li>
-            <li><a href="#Taxonomy_Evolution">Taxonomy and evolution</a></li>
+            <li><a href="#Taxonomy_Evolution">Taxonomy and evolution</a>
                 <ol>
                     <li><a href="#Subspecies">Subspecies</a></li>
                     <li><a href="#Evolution">Evolution</a></li>
                 </ol>
+            </li>
             <li><a href="#Description">Description</a></li>
-            <li><a href="#Ecology_Behavior">Ecology and behaviour</a></li>
+            <li><a href="#Ecology_Behavior">Ecology and behaviour</a>
                 <ol>
                     <li><a href="#Parasites">Parasites</a></li>
                     <li><a href="#Diet">Diet</a></li>
                     <li><a href="#Reproduction">Reproduction</a></li>
                 </ol>
+            </li>
             <li><a href="#Distribution_Habitat">Distribution and habitat</a></li>
             <li><a href="#Threats_Conservation">Threats and conservation</a></li>
             <li><a href="#Human_Relationship">Relationship with humans</a></li>
