--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Kerstin Nyquist">
-    <meta name="description" content="Webpage Portfolio Development"
+    <meta name="description" content="Webpage Portfolio Development">
     <title>Kerstin Nyquist</title>
 </head>
 <body>
