Organization of files

--- a/ICA/4/BusinessCard/ica4Business.html
+++ b/ICA/4/BusinessCard/ica4Business.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="ica4styles.css">
+    <link rel="stylesheet" href="ica4Businessstyles.css">
     <title>Fundamental CSS comprehension</title>
   </head>
   <body>
