--- a/ICA/3/ica3Letter.html
+++ b/ICA/3/ica3Letter.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Dr. Eleanor Gaye"
+    <meta name="author" content="Dr. Eleanor Gaye">
     <title>Letter to Eileen</title>
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="ica3LetterStyles.css">
 </head>
 <body>
 <address class="sender-column">
