--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Kerstin Nyquist">
     <meta name="description" content="Webpage Portfolio Development">
+    <link ref="stylesheet" href="styles.css">
     <title>Kerstin Nyquist</title>
 </head>
 <body>
     <h1>Kerstin Nyquist</h1>
     <h2>she/her/hers</h2>
     <h3>Goals:</h3>
-    <ul> 
+    <ol> 
         <li>Create a website portfolio</li> 
         <li>Learn how to create collections within collections</li>
-    </ul>
+    </ol>
     <p>I'm a senior at CU Boulder studying <em>Environmental Products of Design, Evolutionary Biology, and Computer Thinking and Design.</em> I want to specialize in <strong>biodesign,</strong> and have background in various art media.</p>
     <a href="./img/NyquistHeadshot.jpg">What I Look Like</a>
     <p><a href="https://youtu.be/FSRlUsQ7TJ8">Great Youtube Video</a></p>
