pretty much done

--- a/index.html
+++ b/index.html
@@ -6,20 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Kerstin Nyquist">
     <meta name="description" content="Webpage Portfolio Development">
-    <link ref="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Kerstin Nyquist</title>
 </head>
 <body>
     <h1>Kerstin Nyquist</h1>
     <h2>she/her/hers</h2>
+    <hr>
     <h3>Goals:</h3>
     <ol> 
         <li>Create a website portfolio</li> 
         <li>Learn how to create collections within collections</li>
     </ol>
-    <p>I'm a senior at CU Boulder studying <em>Environmental Products of Design, Evolutionary Biology, and Computer Thinking and Design.</em> I want to specialize in <strong>biodesign,</strong> and have background in various art media.</p>
-    <a href="./img/NyquistHeadshot.jpg">What I Look Like</a>
-    <p><a href="https://youtu.be/FSRlUsQ7TJ8">Great Youtube Video</a></p>
+    <h4>I'm a senior at CU Boulder studying</h4> 
+    <ul>
+        <li><em>Environmental Products of Design,</em></li>
+        <li><em>Evolutionary Biology,</em></li>
+        <li><em>and Creative Technology and Design.</em></li>
+        </ul>
+    <p>I want to specialize in <strong>biodesign,</strong> and have background in various art media.</p>
+    <hr>
+    <a href="./img/NyquistHeadshot.jpg">What I Look Like</a> <br>
+    <a href="https://youtu.be/FSRlUsQ7TJ8">
+        <button class="button1" type="button">Great Youtube Video</button> 
+    </a><br>
     <img src="./img/NyquistHeadshot.jpg" alt="My Face" width="500" height="500">
 </body>
 </html>
