--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
         </ul>
     <p>I want to specialize in <strong>biodesign,</strong> and have background in various art media.</p>
     <hr>
-    <a href="./img/NyquistHeadshot.jpg">What I Look Like</a> <br>
-    <a href="https://youtu.be/FSRlUsQ7TJ8">
-        <button class="button1" type="button">Great Youtube Video</button> 
-    </a><br>
+    <a href="./img/NyquistHeadshot.jpg" class="link1">What I Look Like</a> 
+    <br>
+    <br>
+    <a href="https://youtu.be/FSRlUsQ7TJ8" class="button1">Great Youtube Video
+    </a>
+    <br>
+    <br>
     <img src="./img/NyquistHeadshot.jpg" alt="My Face" width="500" height="500">
 </body>
 </html>
