--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
     <a href="./img/NyquistHeadshot.jpg" class="link1">What I Look Like</a> 
     <br>
     <br>
-    <a href="https://youtu.be/FSRlUsQ7TJ8" class="button1">Great Youtube Video
-    </a>
+    <a href="https://youtu.be/FSRlUsQ7TJ8" class="button1">Great Youtube Video</a>
     <br>
     <br>
     <img src="./img/NyquistHeadshot.jpg" alt="My Face" width="500" height="500">
