--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Kerstin Nyquist">
     <meta name="description" content="Webpage Portfolio Development">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <title>Kerstin Nyquist</title>
 </head>
 <body>
