--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Kerstin Nyquist">
     <meta name="description" content="Webpage Portfolio Development">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <title>Kerstin Nyquist</title>
 </head>
 <body>
