--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </ul>
     <p>I want to specialize in <strong>biodesign,</strong> and have background in various art media.</p>
     <hr>
-    <a href="./img/NyquistHeadshot.jpg" class="link1">What I Look Like</a> 
+    <a href="./img/NyquistHeadshot.jpg" class="link1" target="_blank">What I Look Like</a> 
     <br>
     <br>
     <a href="https://youtu.be/FSRlUsQ7TJ8" class="button1">Great Youtube Video</a>
