--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <li><em>Evolutionary Biology,</em></li>
         <li><em>and Creative Technology and Design.</em></li>
         </ul>
-    <p>I want to specialize in <strong>biodesign,</strong> and have background in various art media.</p>
+    <p class="ptext">I want to specialize in <strong>biodesign,</strong> and have background in various art media.</p>
     <hr>
-    <p>
+    <div>
         <a href="./img/NyquistHeadshot.jpg" class="link1" target="_blank">What I Look Like</a> 
-    </p>
+    </div>
     <p>
     <a href="https://youtu.be/FSRlUsQ7TJ8" class="button1">Great Youtube Video</a>
     </p>
