--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
     <title>Kerstin Nyquist</title>
 </head>
 <body>
-    <h1>Kerstin Nyquist</h1>
+    <nav>
+        <a href="index.html" class="logo">
+            <img src="img/NyquistLogo.png">
+        </a>
+    <ul>
+        <li><a href="research.html">Research</a></li>
+        <li><a href="experiments.html">Experiments</a></li>
+        <li><a href="https://kerstinnyquist.myportfolio.com/">Portfolio</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+    </nav>
+    <main class="grid">
+      <div><h1>Personal Research Blog</h1>
     <h2>she/her/hers</h2>
     <hr>
     <h3>Goals:</h3>
@@ -26,14 +38,17 @@
         <li><em>and Creative Technology and Design.</em></li>
         </ul>
     <p class="ptext">I want to specialize in <strong>biodesign,</strong> and have background in various art media.</p>
-    <hr>
-    <div>
-        <a href="./img/NyquistHeadshot.jpg" class="link1" target="_blank">What I Look Like</a> 
     </div>
+    <div class="indeximages">
+    <p>
+        <a href="./img/NyquistHeadshot.jpg" class="link1" target="_blank">What I Look Like</a> 
+    </p>
     <p>
         <a href="https://youtu.be/FSRlUsQ7TJ8" class="button1">Great Youtube Video</a>
     </p>
-    <br>
-    <img src="./img/NyquistHeadshot.jpg" alt="My Face" width="500" height="500">
+    <img src="./img/NyquistHeadshot.jpg" class="me" alt="My Face">
+</p>
+</div>
+</main>
 </body>
 </html>
