--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Webpage Portfolio Development">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/561f9c4dd1.js" crossorigin="anonymous"></script>
     <title>Kerstin Nyquist</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
             <i class="fas fa-bars"></i>
         </label>
         <a href="index.html" class="logo">
-            <img src="img/NyquistLogo.png">
+            <img src="img/NyquistLogo.png" alt="Logo">
         </a>
     <ul id="navbarlinks">
         <li><a href="research.html">Research</a></li>
@@ -54,7 +54,6 @@
         <a href="https://youtu.be/FSRlUsQ7TJ8" class="button1">Great Youtube Video</a>
     </p>
     <img src="./img/NyquistHeadshot.jpg" class="me" alt="My Face">
-</p>
 </div>
 </main>
 </body>
