changing the main theme

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             <img src="img/NyquistLogo.png" alt="Logo">
         </a>
     <ul id="navbarlinks">
-        <li><a href="research.html">Research</a></li>
-        <li><a href="experiments.html">Experiments</a></li>
+        <li><a href="animals.html">Animals</a></li>
+        <li><a href="plants.html">Plants</a></li>
+        <li><a href="microbes.html">Microbes</a></li>
         <li><a href="https://kerstinnyquist.myportfolio.com/">Portfolio</a></li>
-        <li><a href="about.html">About</a></li>
       </ul>
     </nav>
     <main class="grid">
-      <div><h1>Personal Research Blog</h1>
-    <h2>she/her/hers</h2>
+      <div><h1>Cool Living Things</h1>
+    <h2>To me at least</h2>
     <hr>
     <h3>Goals:</h3>
     <ol> 
