changing the index

--- a/index.html
+++ b/index.html
@@ -33,7 +33,24 @@
       <div><h1>Cool Living Things</h1>
     <h2>To me at least</h2>
     <hr>
-    <h3>Goals:</h3>
+    <div class="container">
+        <!-- https://www.youtube.com/watch?v=m91pL94YLvg-->
+        <div class="col">
+            <h3>Plants</h3>
+            <p class="caption">Facts about this particular gazelle maybe.</p>
+            <img src="img/BaobabTree.png">
+        </div>
+        <div class="col">
+            <h3>Animals</h3>
+            <p class="caption">Facts about this particular gazelle maybe.</p>
+            <img src="img/GemsbokAltered.png">
+        </div>
+        <div class="col">
+            <h3>Fungi?</h3>
+            <p class="caption">Facts about this particular gazelle maybe.</p>
+            <img src="img/MaleThomsonsGazelleWiki.jpg">
+        </div>
+    <!--<h3>Goals:</h3>
     <ol> 
         <li>Create a website portfolio</li> 
         <li>Learn how to create collections within collections</li>
@@ -54,7 +71,7 @@
         <a href="https://youtu.be/FSRlUsQ7TJ8" class="button1">Great Youtube Video</a>
     </p>
     <img src="./img/NyquistHeadshot.jpg" class="me" alt="My Face">
-</div>
+</div> -->
 </main>
 </body>
 </html>
