--- a/animals.html
+++ b/animals.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <!-- https://www.youtube.com/watch?v=oLgtucwjVII&t=408s
-            how to add a hamburger bar, and the navbar in different states 
+            how to add a hamburger bar, and the navbar in different states -->
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
             <i class="fas fa-bars"></i>
@@ -26,6 +26,48 @@
         <li><a href="microbes.html">Microbes</a></li>
         <li><a href="https://kerstinnyquist.myportfolio.com/">Portfolio</a></li>
       </ul>
-    </nav> -->
+    </nav>
+    <h1>Cool Animals</h1>
+    <hr>
+    <div class="gsetup">
+        <div class="gallery">
+            <a target="_blank" href="img/sifakaaltered.jpg">
+              <img src="img/sifakaaltered.jpg" alt="Sifaka" width="400">
+            </a>
+            <div class="desc">Sifaka live in Madagascar and hop through trees finding good leaves to eat.</div>
+          </div>
+        <div class="gallery">
+            <a target="_blank" href="img/bettaalteredsize.jpg">
+              <img src="img/bettaalteredsize.jpg" alt="Betta">
+            </a>
+            <div class="desc">Male Siamese fighting fish create bubble nests at the surface of freshwater and carry their eggs in their mouths to deposite them into the nests.</div>
+        </div>
+        <div class="gallery">
+            <a target="_blank" href="img/PikaAltered.jpg">
+              <img src="img/PikaAltered.jpg" alt="Pika" width="400">
+            </a>
+            <div class="desc">Pika are....</div>
+        </div>
+        <div class="gcolor">
+        <div class="gallery">
+            <a target="_blank" href="img/SeaSlugSquare.jpg">
+              <img src="img/SeaSlugSquare.jpg" alt="Sea Slug" width="400px">
+            </a>
+            <div class="desc">Sea slugs are....</div>
+        </div>
+    </div>
+        <div class="gallery">
+            <a target="_blank" href="img/MaleGemsbokSquare.jpg">
+              <img src="img/MaleGemsbokSquare.jpg" alt="Gemsbok" width="400">
+            </a>
+            <div class="desc">Gemsbok are....</div>
+        </div>
+        <div class="gallery">
+            <a target="_blank" href="img/SeaOtterSquare.jpg">
+              <img src="img/SeaOtterSquare.jpg" alt="Sea Otter" width="400">
+            </a>
+            <div class="desc">Sea otters are....</div>
+        </div>
+    </div>
 </body>
 </html>
