--- a/index.html
+++ b/index.html
@@ -30,48 +30,39 @@
       </ul>
     </nav>
     <main class="grid">
-      <div><h1>Cool Living Things</h1>
+      <div><h1>Cool Nature</h1>
     <h2>To me at least</h2>
     <hr>
     <div class="container">
         <!-- https://www.youtube.com/watch?v=m91pL94YLvg-->
         <div class="col">
             <h3>Plants</h3>
-            <p class="caption">Facts about this particular gazelle maybe.</p>
+            <div class="caption">
+            <p>Facts about this particular gazelle maybe.</p>
+            <form action="/plants.html">
+            <button type="button">Go to gallery</button>
+            </form>
+        </div>
             <img src="img/BaobabTree.png">
         </div>
         <div class="col">
             <h3>Animals</h3>
-            <p class="caption">Facts about this particular gazelle maybe.</p>
+            <div class="caption">
+                <p>Facts about this particular gazelle maybe.</p>
+                <form action="/animals.html">
+                    <button type="button">Go to gallery</button>
+                    </form>
+                </div>
             <img src="img/GemsbokAltered.png">
         </div>
         <div class="col">
             <h3>Fungi?</h3>
-            <p class="caption">Facts about this particular gazelle maybe.</p>
+            <div class="caption">
+            <p>Facts about this particular gazelle maybe.</p>
+            <a href="/microbes.html" class="button1">Go to gallery</a>
+            </div>
             <img src="img/MaleThomsonsGazelleWiki.jpg">
         </div>
-    <!--<h3>Goals:</h3>
-    <ol> 
-        <li>Create a website portfolio</li> 
-        <li>Learn how to create collections within collections</li>
-    </ol>
-    <h4>I'm a senior at CU Boulder studying</h4> 
-    <ul>
-        <li><em>Environmental Products of Design,</em></li>
-        <li><em>Evolutionary Biology,</em></li>
-        <li><em>and Creative Technology and Design.</em></li>
-        </ul>
-    <p class="ptext">I want to specialize in <strong>biodesign,</strong> and have background in various art media.</p>
-    </div>
-    <div class="indeximages">
-    <p>
-        <a href="./img/NyquistHeadshot.jpg" class="link1" target="_blank">What I Look Like</a> 
-    </p>
-    <p>
-        <a href="https://youtu.be/FSRlUsQ7TJ8" class="button1">Great Youtube Video</a>
-    </p>
-    <img src="./img/NyquistHeadshot.jpg" class="me" alt="My Face">
-</div> -->
 </main>
 </body>
 </html>
