--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <ul id="navbarlinks">
         <li><a href="animals.html">Animals</a></li>
         <li><a href="plants.html">Plants</a></li>
-        <li><a href="microbes.html">Microbes</a></li>
+        <li><a href="forms.html">Forms</a></li>
         <li><a href="https://kerstinnyquist.myportfolio.com/">Portfolio</a></li>
       </ul>
     </nav>
@@ -38,30 +38,26 @@
         <div class="col">
             <h3>Plants</h3>
             <div class="caption">
-            <p>Facts about this particular gazelle maybe.</p>
-            <form action="/plants.html">
-            <button type="button">Go to gallery</button>
-            </form>
+            <p>Water-storing trees to medicinal herbs</p>
+            <p><a href="plants.html" class="button1">Go</a></p>
         </div>
             <img src="img/BaobabTree.png">
         </div>
         <div class="col">
             <h3>Animals</h3>
             <div class="caption">
-                <p>Facts about this particular gazelle maybe.</p>
-                <form action="/animals.html">
-                    <button type="button">Go to gallery</button>
-                    </form>
+                <p>Water, land, and air creatures</p>
+                <p><a href="animals.html" class="button1">Go</a></p>
                 </div>
             <img src="img/GemsbokAltered.png">
         </div>
         <div class="col">
-            <h3>Fungi?</h3>
+            <h3>Forms</h3>
             <div class="caption">
-            <p>Facts about this particular gazelle maybe.</p>
-            <a href="/microbes.html" class="button1">Go to gallery</a>
+            <p>Gemstones to unique environments</p>
+            <p><a href="forms.html" class="button1">Go</a></p>
             </div>
-            <img src="img/MaleThomsonsGazelleWiki.jpg">
+            <img src="img/OpalAltered.png">
         </div>
 </main>
 </body>
