--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/561f9c4dd1.js" crossorigin="anonymous"></script>
-    <title>Kerstin Nyquist</title>
+    <title>Kerstin Nyquist's Favorite Nature Things</title>
 </head>
 <body>
     <nav>
@@ -36,28 +36,29 @@
     <div class="container">
         <!-- https://www.youtube.com/watch?v=m91pL94YLvg-->
         <div class="col">
+            <img src="img/BaobabTree.png" class="indeximg">
             <h3>Plants</h3>
             <div class="caption">
             <p>Water-storing trees to medicinal herbs</p>
             <p><a href="plants.html" class="button1">Go</a></p>
-        </div>
-            <img src="img/BaobabTree.png">
+        </div> 
         </div>
         <div class="col">
+            <img src="img/GemsbokAltered.png" class="indeximg">
             <h3>Animals</h3>
             <div class="caption">
                 <p>Water, land, and air creatures</p>
                 <p><a href="animals.html" class="button1">Go</a></p>
                 </div>
-            <img src="img/GemsbokAltered.png">
         </div>
         <div class="col">
+            <img src="img/OpalAltered.png" class="indeximg">
             <h3>Forms</h3>
             <div class="caption">
             <p>Gemstones to unique environments</p>
             <p><a href="forms.html" class="button1">Go</a></p>
             </div>
-            <img src="img/OpalAltered.png">
+            
         </div>
 </main>
 </body>
