--- a/animals.html
+++ b/animals.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/561f9c4dd1.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Animals</title>
 </head>
 <body>
     <nav>
@@ -21,9 +21,9 @@
             <img src="img/NyquistLogo.png" alt="Logo">
         </a>
     <ul id="navbarlinks">
-        <li><a href="animals.html">Animals</a></li>
         <li><a href="plants.html">Plants</a></li>
-        <li><a href="microbes.html">Microbes</a></li>
+        <li><a href="animals.html">Animals</a></li>
+        <li><a href="forms.html">Forms</a></li>
         <li><a href="https://kerstinnyquist.myportfolio.com/">Portfolio</a></li>
       </ul>
     </nav>
