adding color overlay to images and determining size

--- a/plants.html
+++ b/plants.html
@@ -27,47 +27,70 @@
         <li><a href="https://kerstinnyquist.myportfolio.com/">Portfolio</a></li>
       </ul>
     </nav>
-    <h1>Cool Animals</h1>
+    <h1>Cool Plants</h1>
     <hr>
     <div class="gsetup">
+
         <div class="gallery">
-            <a target="_blank" href="img/sifakaaltered.jpg">
-              <img src="img/sifakaaltered.jpg" alt="Sifaka" width="400">
-            </a>
-            <div class="desc">Sifaka live in Madagascar and hop through trees finding good leaves to eat.</div>
-          </div>
-        <div class="gallery">
-            <a target="_blank" href="img/bettaalteredsize.jpg">
-              <img src="img/bettaalteredsize.jpg" alt="Betta">
-            </a>
-            <div class="desc">Male Siamese fighting fish create bubble nests at the surface of freshwater and carry their eggs in their mouths to deposite them into the nests.</div>
+            <div class = "cimg">
+                <a target="_blank" href="img/BaobabTree.jpg">
+                    <img src="img/BaobabTree.jpg" alt="Baobab" id="gimg">
+                </a>
+            </div>
+            <div class="desc">Baobab trees are a Madagascar tree that is excellent at storing water.
+            </div>
         </div>
+
         <div class="gallery">
-            <a target="_blank" href="img/PikaAltered.jpg">
-              <img src="img/PikaAltered.jpg" alt="Pika" width="400">
-            </a>
-            <div class="desc">Pika are....</div>
+            <div class="cimg">
+                <a target="_blank" href="img/AspenTree.jpg">
+                    <img src="img/AspenTree.jpg" alt="Aspen" id="gimg">
+                </a>
+            </div>
+            <div class="desc">Why are their trunks like that? So cool.
+            </div>
         </div>
-        <div class="gcolor">
+
         <div class="gallery">
-            <a target="_blank" href="img/SeaSlugSquare.jpg">
-              <img src="img/SeaSlugSquare.jpg" alt="Sea Slug" width="400px">
-            </a>
-            <div class="desc">Sea slugs are....</div>
+            <div class="cimg">
+                <a target="_blank" href="img/Milkweed.jpg">
+                    <img src="img/Milkweed.jpg" alt="Milkweed" id="gimg">
+                </a>
+            </div>
+            <div class="desc">Milkweeds are great medicinal plants.
+            </div>
         </div>
-    </div>
+
         <div class="gallery">
-            <a target="_blank" href="img/MaleGemsbokSquare.jpg">
-              <img src="img/MaleGemsbokSquare.jpg" alt="Gemsbok" width="400">
-            </a>
-            <div class="desc">Gemsbok are....</div>
+            <div class="cimg">
+                <a target="_blank" href="img/Ixora.jpg">
+                    <img src="img/Ixora.jpg" alt="Ixora" id="gimg">
+                </a>
+            </div>
+            <div class="desc">Ixora have a sweet nectar on its stem that you can suck on after gently pulling it from the flower's base.
+            </div>
         </div>
+
         <div class="gallery">
-            <a target="_blank" href="img/SeaOtterSquare.jpg">
-              <img src="img/SeaOtterSquare.jpg" alt="Sea Otter" width="400">
-            </a>
-            <div class="desc">Sea otters are....</div>
+            <div class="cimg">
+                <a target="_blank" href="img/Rambutan.jpg">
+                    <img src="img/Rambutan.jpg" alt="Rambutan" id="gimg">
+                </a>
+            </div>
+            <div class="desc">Yummy lychee fruit I grew up with.
+            </div>
         </div>
+
+        <div class="gallery">
+            <div class="cimg">
+                <a target="_blank" href="img/SeaOtterSquare.jpg">
+                    <img src="img/SeaOtterSquare.jpg" alt="Sea Otter" width="400">
+                </a>
+            </div>
+            <div class="desc">Sea otters are....
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
