idk whats going on

--- a/animals.html
+++ b/animals.html
@@ -34,7 +34,7 @@
       <div class="gallery">
         <div class = "cimg">
             <a target="_blank" href="img/sifakaaltered.jpg">
-              <img src="img/sifakaaltered.jpg" alt="Sifaka" id="gimg">
+              <img src="img/sifakaaltered.jpg" alt="Sifaka" class="gimg">
             </a>
         </div>
         <div class="desc">Sifaka live in Madagascar and hop through trees finding good leaves to eat.
@@ -44,17 +44,17 @@
       <div class="gallery">
         <div class="cimg">
           <a target="_blank" href="img/bettaalteredsize.jpg">
-            <img src="img/bettaalteredsize.jpg" alt="Betta" id="gimg">
+            <img src="img/bettaalteredsize.jpg" alt="Betta" class="gimg">
           </a>
         </div>
-        <div class="desc">Male Siamese fighting fish create bubble nests at the surface of freshwater and carry their eggs in their mouths to deposite them into the nests.
+        <div class="desc">Male Siamese fighting fish create bubble nests at the surface of freshwater and carry their eggs in their mouths to place them into the nests.
         </div>
       </div>
 
       <div class="gallery">
         <div class="cimg">
           <a target="_blank" href="img/PikaAltered.jpg">
-            <img src="img/PikaAltered.jpg" alt="Pika" id="gimg">
+            <img src="img/PikaAltered.jpg" alt="Pika" class="gimg">
           </a> 
         </div>
         <div class="desc">Pika are....
@@ -64,7 +64,7 @@
       <div class="gallery">
         <div class="cimg">
           <a target="_blank" href="img/SeaSlugSquare.jpg">
-            <img src="img/SeaSlugSquare.jpg" alt="Sea Slug" id="gimg">
+            <img src="img/SeaSlugSquare.jpg" alt="Sea Slug" class="gimg">
           </a> 
         </div>
         <div class="desc">Sea slugs are....
@@ -74,7 +74,7 @@
       <div class="gallery">
         <div class="cimg">
           <a target="_blank" href="img/MaleGemsbokSquare.jpg">
-            <img src="img/MaleGemsbokSquare.jpg" alt="Gemsbok" id="gimg">
+            <img src="img/MaleGemsbokSquare.jpg" alt="Gemsbok" class="gimg">
           </a> 
         </div>
         <div class="desc">Gemsbok are....
@@ -83,11 +83,11 @@
 
       <div class="gallery">
         <div class="cimg">
-           <a target="_blank" href="img/SeaOtterSquare.jpg">
-            <img src="img/SeaOtterSquare.jpg" alt="Sea Otter" id="gimg">
+           <a target="_blank" href="img/LeafInsect.jpg">
+            <img src="img/LeafInsect.jpg" alt="Leaf Insect" class="gimg">
           </a> 
         </div>
-        <div class="desc">Sea otters are....
+        <div class="desc">Leaf insects not only blend in with leaves through form and color, but they also shake when they move to mimic rustling leaves.
         </div>
       </div>
       
