--- a/forms.html
+++ b/forms.html
@@ -34,7 +34,7 @@
         <div class="gallery">
             <div class = "cimg">
                 <a target="_blank" href="img/WeloOpal.jpg">
-                    <img src="img/WeloOpal.jpg" alt="Ethiopian Welo Opal" id="gimg">
+                    <img src="img/WeloOpal.jpg" alt="Ethiopian Welo Opal" class="gimg">
                 </a>
             </div>
             <div class="desc">Ethiopian Welo opal reflects light in honeycomb-like shapes.
@@ -43,9 +43,7 @@
 
         <div class="gallery">
             <div class="cimg">
-                <a target="_blank" href="img/Dallol.jpeg">
-                    <img src="img/Dallol.jpeg" alt="Dallol" id="gimg">
-                </a>
+                <img src="img/Dallol.jpeg" alt="Dallol" class="gimg">
             </div>
             <div class="desc">Cool place in Ethiopia.
             </div>
@@ -53,28 +51,29 @@
 
         <div class="gallery">
             <div class="cimg">
-                <a target="_blank" href="img/Milkweed.jpg">
-                    <img src="img/Milkweed.jpg" alt="Milkweed" id="gimg">
+                <a target="_blank" href="img/MossAgate.jpg">
+                    <img src="img/MossAgate.jpg" alt="Moss Agate" class="gimg">
                 </a>
             </div>
-            <div class="desc">Milkweeds are great medicinal plants.
+            <div class="desc"><p>Indonesian moss agate, made from volcanic rock. The "moss" are metal impurities.</p>
+                <p>Photographer: Chille Maulidhaa</p>
             </div>
         </div>
 
         <div class="gallery">
             <div class="cimg">
-                <a target="_blank" href="img/SeaSlugSquare.jpg">
-                    <img src="img/SeaSlugSquare.jpg" alt="Sea Slug" width="400px">
+                <a target="_blank" href="img/MethaneBubbles.jpg">
+                    <img src="img/MethaneBubbles.jpg" alt="Methane Bubbles" class="gimg">
                 </a>
             </div>
-            <div class="desc">Sea slugs are....
+            <div class="desc">Frozen methane bubbles are captured in Lake Baikal. It sits over a rift zone, which is a crack in Earth's crust.
             </div>
         </div>
 
         <div class="gallery">
             <div class="cimg">
                 <a target="_blank" href="img/MaleGemsbokSquare.jpg">
-                    <img src="img/MaleGemsbokSquare.jpg" alt="Gemsbok" width="400">
+                    <img src="img/MaleGemsbokSquare.jpg" alt="Gemsbok" class="gimg">
                 </a>
             </div>
             <div class="desc">Gemsbok are....
@@ -84,7 +83,7 @@
         <div class="gallery">
             <div class="cimg">
                 <a target="_blank" href="img/SeaOtterSquare.jpg">
-                    <img src="img/SeaOtterSquare.jpg" alt="Sea Otter" width="400">
+                    <img src="img/SeaOtterSquare.jpg" alt="Sea Otter" class="gimg">
                 </a>
             </div>
             <div class="desc">Sea otters are....
