--- a/plants.html
+++ b/plants.html
@@ -33,9 +33,7 @@
 
         <div class="gallery">
             <div class = "cimg">
-                <a target="_blank" href="img/BaobabTree.jpg">
-                    <img src="img/BaobabTree.jpg" alt="Baobab" id="gimg">
-                </a>
+                <img src="img/BaobabTree.jpg" alt="Baobab" class="gimg">
             </div>
             <div class="desc">Baobab trees are a Madagascar tree that is excellent at storing water.
             </div>
@@ -43,9 +41,7 @@
 
         <div class="gallery">
             <div class="cimg">
-                <a target="_blank" href="img/AspenTree.jpg">
-                    <img src="img/AspenTree.jpg" alt="Aspen" id="gimg">
-                </a>
+                    <img src="img/AspenTree.jpg" alt="Aspen" class="gimg">
             </div>
             <div class="desc">Why are their trunks like that? So cool.
             </div>
@@ -54,7 +50,7 @@
         <div class="gallery">
             <div class="cimg">
                 <a target="_blank" href="img/Milkweed.jpg">
-                    <img src="img/Milkweed.jpg" alt="Milkweed" id="gimg">
+                    <img src="img/Milkweed.jpg" alt="Milkweed" class="gimg">
                 </a>
             </div>
             <div class="desc">Milkweeds are great medicinal plants.
@@ -64,7 +60,7 @@
         <div class="gallery">
             <div class="cimg">
                 <a target="_blank" href="img/Ixora.jpg">
-                    <img src="img/Ixora.jpg" alt="Ixora" id="gimg">
+                    <img src="img/Ixora.jpg" alt="Ixora" class="gimg">
                 </a>
             </div>
             <div class="desc">Ixora have a sweet nectar on its stem that you can suck on after gently pulling it from the flower's base.
@@ -74,7 +70,7 @@
         <div class="gallery">
             <div class="cimg">
                 <a target="_blank" href="img/Rambutan.jpg">
-                    <img src="img/Rambutan.jpg" alt="Rambutan" id="gimg">
+                    <img src="img/Rambutan.jpg" alt="Rambutan" class="gimg">
                 </a>
             </div>
             <div class="desc">Yummy lychee fruit I grew up with.
@@ -83,11 +79,11 @@
 
         <div class="gallery">
             <div class="cimg">
-                <a target="_blank" href="img/SeaOtterSquare.jpg">
-                    <img src="img/SeaOtterSquare.jpg" alt="Sea Otter" width="400">
+                <a target="_blank" href="img/GiantLilyPads.jpg">
+                    <img src="img/GiantLilyPads.jpg" alt="Giant Lily Pads" class="gimg">
                 </a>
             </div>
-            <div class="desc">Sea otters are....
+            <div class="desc">Giant lily pads are capable of carrying a adult human due to their vein structure.
             </div>
         </div>
 
