--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
       </ul>
     </nav>
     <main class="grid">
-      <div><h1>Cool Nature</h1>
+    <h1>Cool Nature</h1>
     <h2>To me at least</h2>
     <hr>
     <div class="container">
         <!-- https://www.youtube.com/watch?v=m91pL94YLvg-->
         <div class="col">
-            <img src="img/BaobabTree.png" class="indeximg">
+            <img src="img/BaobabTree.png" alt="Plant Photo" class="indeximg">
             <h3>Plants</h3>
             <div class="caption">
             <p>Water-storing trees to medicinal herbs</p>
@@ -44,7 +44,7 @@
         </div> 
         </div>
         <div class="col">
-            <img src="img/GemsbokAltered.png" class="indeximg">
+            <img src="img/GemsbokAltered.png" alt="Animal Photo" class="indeximg">
             <h3>Animals</h3>
             <div class="caption">
                 <p>Water, land, and air creatures</p>
@@ -52,14 +52,14 @@
                 </div>
         </div>
         <div class="col">
-            <img src="img/OpalAltered.png" class="indeximg">
+            <img src="img/OpalAltered.png" alt="Form Photo" class="indeximg">
             <h3>Forms</h3>
             <div class="caption">
             <p>Gemstones to unique environments</p>
             <p><a href="forms.html" class="button1">Go</a></p>
             </div>
-            
         </div>
+    </div>
 </main>
 </body>
 </html>
