added final img and made some minor changes to css

--- a/forms.html
+++ b/forms.html
@@ -72,21 +72,17 @@
 
         <div class="gallery">
             <div class="cimg">
-                <a target="_blank" href="img/MaleGemsbokSquare.jpg">
-                    <img src="img/MaleGemsbokSquare.jpg" alt="Gemsbok" class="gimg">
-                </a>
+                    <img src="img/TentRocks.jpg" alt="Tent Rocks" class="gimg">
             </div>
-            <div class="desc">Gemsbok are....
+            <div class="desc">Tent Rocks are....
             </div>
         </div>
 
         <div class="gallery">
             <div class="cimg">
-                <a target="_blank" href="img/SeaOtterSquare.jpg">
-                    <img src="img/SeaOtterSquare.jpg" alt="Sea Otter" class="gimg">
-                </a>
+                    <img src="img/CarlsbadCaverns.jpg" alt="Carlsbad Caverns" class="gimg">
             </div>
-            <div class="desc">Sea otters are....
+            <div class="desc">Carlsbad Caverns are....
             </div>
         </div>
         
