--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
       </ul>
     </nav>
     <main class="grid">
-    <h1>Cool Nature</h1>
-    <h2>To me at least</h2>
+    <div>
+        <h1>Natural Things That I Love</h1>
     <hr>
+    </div>
     <div class="container">
         <!-- https://www.youtube.com/watch?v=m91pL94YLvg-->
         <div class="col">
             <img src="img/BaobabTree.png" alt="Plant Photo" class="indeximg">
-            <h3>Plants</h3>
+            <h2>Plants</h2>
             <div class="caption">
             <p>Water-storing trees to medicinal herbs</p>
             <p><a href="plants.html" class="button1">Go</a></p>
@@ -45,7 +46,7 @@
         </div>
         <div class="col">
             <img src="img/GemsbokAltered.png" alt="Animal Photo" class="indeximg">
-            <h3>Animals</h3>
+            <h2>Animals</h2>
             <div class="caption">
                 <p>Water, land, and air creatures</p>
                 <p><a href="animals.html" class="button1">Go</a></p>
@@ -53,7 +54,7 @@
         </div>
         <div class="col">
             <img src="img/OpalAltered.png" alt="Form Photo" class="indeximg">
-            <h3>Forms</h3>
+            <h2>Forms</h2>
             <div class="caption">
             <p>Gemstones to unique environments</p>
             <p><a href="forms.html" class="button1">Go</a></p>
